--- a/Initium-Odp/war/odp/full.css
+++ b/Initium-Odp/war/odp/full.css
@@ -236,7 +236,7 @@ body
 .main-buttonbar
 {
 	position:relative;
-    background-image: url(https://imgur.com/nug9Bl5.png);
+    background-image: url(https://storage.googleapis.com/initium-resources/images/ui/wow-ui-bottom-bar1.png);
     width: 485px;
     height: 146px;
     margin-left: -50%;
